--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
   <div class="container">
     <header>
-      <img src="Foto.jpeg" alt="Foto Profil" />
+      <img src="Asset/Foto.jpeg" alt="Foto Profil">
       <h1>Sindy Rahmahsari</h1>
       <p>Email: sindyrahmahsari101@gmail.com | Telp: 0857-3086-3381</p>
       <p class="links">
